feat: Position in employee

--- a/public/assets/css/main/style.css
+++ b/public/assets/css/main/style.css
@@ -3,7 +3,7 @@
 }
 
 *:focus {
-  background-color: rgba(67, 94, 190, 0.2);
+  /* background-color: rgba(67, 94, 190, 0.2); */
   outline: none;
 }
 
